# smart-workflow

./: LICENSE  README.md  pyproject.toml
smart_workflow/: __init__.py  health.py  health_server.py  task.py  workflow.py
smart_workflow/examples/: simple_pipeline.py
smart_workflow/monitoring/: __init__.py  client.py
